@@ -29,7 +29,6 @@ import org.apache.commons.lang3.builder.ToStringBuilder;
 import java.util.Date;
 import java.util.LinkedList;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -341,7 +340,7 @@ public class SetupWizardProductDto implements Selectable,
                 getOptionalChannels().stream()
                 )
                 .filter(Channel::isInstallerUpdates)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
