@@ -27,7 +27,6 @@ import org.apache.logging.log4j.Logger;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 /**
  * Provides API to manage user notifications.
@@ -118,7 +117,7 @@ public class UserNotificationsHandler extends BaseHandler {
                     });
                 })
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .toList();
         int cnt = UserNotificationFactory.delete(collect);
         return cnt == notifications.size() ? 1 : 0;
     }
