@@ -38,7 +38,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.stream.Collectors;
 
 
 /**
@@ -131,7 +130,7 @@ public class TaskoJob implements Job {
                                                      .stream()
                                                      .sorted(Comparator.comparing(TaskoTemplate::getOrdering))
                                                      .filter(template -> template.getOrdering() >= bunchStartIndex)
-                                                     .collect(Collectors.toList());
+                                                     .toList();
 
         String previousRunStatus = null;
         for (TaskoTemplate template : bunchTemplates) {
