@@ -35,7 +35,6 @@ import java.time.ZoneId;
 import java.time.ZonedDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import net.fortuna.ical4j.model.Calendar;
 
@@ -69,10 +68,10 @@ public class IcalUtilsTest  {
         ZonedDateTime tokyoStart = ZonedDateTime.parse("2020-06-09T21:00:00+09:00"); // Japan (same moment in time!)
 
         List<Pair<Instant, Instant>> listNewYork = icalUtils.calculateUpcomingPeriods(multiZonesCal, empty(),
-                newYorkStart.toInstant(), 5).collect(Collectors.toList());
+                newYorkStart.toInstant(), 5).toList();
 
         List<Pair<Instant, Instant>> listTokyo = icalUtils.calculateUpcomingPeriods(multiZonesCal, empty(),
-                tokyoStart.toInstant(), 5).collect(Collectors.toList());
+                tokyoStart.toInstant(), 5).toList();
 
         assertEquals(listNewYork, listTokyo);
     }
@@ -89,12 +88,12 @@ public class IcalUtilsTest  {
         ZonedDateTime newYorkStart = ZonedDateTime.parse("2020-06-08T02:00:00-04:00"); // NY
 
         List<Pair<Instant, Instant>> listNewYork = icalUtils.calculateUpcomingPeriods(multiZonesCal, empty(),
-                newYorkStart.toInstant(), 5).collect(Collectors.toList());
+                newYorkStart.toInstant(), 5).toList();
 
         // Sri Lanka is ahead of NYC, so at 11:00 in Sri Lanka, we still see maint. windows starting at 2:00 in NY
         ZonedDateTime sriLankaAlike = ZonedDateTime.parse("2020-06-08T11:00:00+05:30");
         List<Pair<Instant, Instant>> listSriLanka = icalUtils.calculateUpcomingPeriods(multiZonesCal, empty(),
-                sriLankaAlike.toInstant(), 5).collect(Collectors.toList());
+                sriLankaAlike.toInstant(), 5).toList();
         assertEquals(listNewYork, listSriLanka);
     }
 
@@ -111,15 +110,15 @@ public class IcalUtilsTest  {
         ZonedDateTime newYorkStart = ZonedDateTime.parse("2020-06-08T08:00:00-04:00"); // NY
 
         List<Pair<Instant, Instant>> listNewYork = icalUtils.calculateUpcomingPeriods(multiZonesCal, empty(),
-                newYorkStart.toInstant(), 5).collect(Collectors.toList());
+                newYorkStart.toInstant(), 5).toList();
 
         // Tahiti, on the other hand is behind NYC, so at 8:00 Tahitian time, the maintenance windows at 8:00 NY time
         // is already over and we shouldn't see it
         ZonedDateTime tahitiLike = ZonedDateTime.parse("2020-06-08T08:00:00-10:00");
         List<Pair<Instant, Instant>> listTahiti = icalUtils.calculateUpcomingPeriods(multiZonesCal, empty(),
-                tahitiLike.toInstant(), 4).collect(Collectors.toList());
+                tahitiLike.toInstant(), 4).toList();
 
-        List<Pair<Instant, Instant>> newYorkButFirst = listNewYork.stream().skip(1).collect(Collectors.toList());
+        List<Pair<Instant, Instant>> newYorkButFirst = listNewYork.stream().skip(1).toList();
         // the Tahitian windows should match the NYC ones minus the first one
         assertEquals(newYorkButFirst, listTahiti);
     }
@@ -136,16 +135,16 @@ public class IcalUtilsTest  {
         List<Pair<String, String>> nycEvents = icalUtils.calculateUpcomingPeriods(
                 multiZonesCal, of("Maint. windows - NYC - weekdays"), datetime.toInstant(), 3)
                 .map(pair -> Pair.of(formatNY(pair.getLeft()), formatNY((pair.getRight()))))
-                .collect(Collectors.toList());
+                .toList();
 
         List<Pair<String, String>> sriLankaEvts = icalUtils.calculateUpcomingPeriods(
                 multiZonesCal, of("Maint. windows-Sri Lanka"), datetime.toInstant(), 3)
                 .map(pair -> Pair.of(formatSriLanka(pair.getLeft()), formatSriLanka((pair.getRight()))))
-                .collect(Collectors.toList());
+                .toList();
 
         List<Pair<Instant, Instant>> listNoEvts = icalUtils.calculateUpcomingPeriods(
                 multiZonesCal, of("There is no window, only zuul"), datetime.toInstant(), 5)
-                .collect(Collectors.toList());
+                .toList();
 
         // NY maintenance windows take place every weekday, 8:00 - 10:00 local time
         assertEquals(
