@@ -27,7 +27,6 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 /**
  * Serializer for {@link com.suse.manager.maintenance.rescheduling.RescheduleResult}
@@ -79,7 +78,7 @@ public class RescheduleResultSerializer extends ApiResponseSerializer<Reschedule
                 a.put("prerequisite", action.getPrerequisite().getId());
             }
             a.put("affected_system_ids", src.getActionsServers().get(action).stream()
-                    .map(Server::getId).collect(Collectors.toList()));
+                    .map(Server::getId).toList());
             a.put("details", StringUtil.toPlainText(action.getFormatter().getNotes()));
             actions.add(a);
         }
